--- a/AdventOfCode/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode/AdventOfCode.csproj
@@ -49,6 +49,9 @@
     <None Update="2023\Day04Input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="2023\Day05Input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
